<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.example.mindgeek_test.password_management.PasswordManagementViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/back"
            android:onClick="@{() -> viewmodel.onBackClicked()}"
            />

        <Button
            android:id="@+id/turn_off_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turn_off_password"
            app:layout_constraintBottom_toTopOf="@id/edit_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            android:onClick="@{() -> viewmodel.onTurnOffPasswordClick()}"
            />

        <Button
            android:id="@+id/edit_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/edit_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/turn_off_button"
            app:layout_constraintStart_toStartOf="@id/turn_off_button"
            app:layout_constraintTop_toBottomOf="@id/turn_off_button"
            app:layout_constraintVertical_chainStyle="packed"
            android:onClick="@{() -> viewmodel.onEditPasswordClick()}"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>